--- a/public/index.html
+++ b/public/index.html
@@ -73,5 +73,7 @@
 
     <!-- Template Javascript -->
     <script src="%PUBLIC_URL%/assets/js/main.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   </body>
 </html>
