--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,6 @@
 <html lang="en">
 
 <head>
-
-   
-
-
-    
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -26,8 +21,6 @@
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/vendor.css" />
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/style.css" />
 
-
-
   <!-- Icon Font Stylesheet -->
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -42,7 +35,12 @@
   <!-- Template Stylesheet -->
   <link href="%PUBLIC_URL%/assets/css/style-1.css" rel="stylesheet">
 
-  
+  <link rel="stylesheet" href="https://unpkg.com/primeicons/primeicons.css" />
+  <link rel="stylesheet" href="https://unpkg.com/primereact/resources/themes/lara-light-indigo/theme.css" />
+  <link rel="stylesheet" href="https://unpkg.com/primereact/resources/primereact.min.css" />
+  <link rel="stylesheet" href="https://unpkg.com/primeflex@3.2.1/primeflex.min.css" />
+
+
 </head>
 
 <body>
@@ -66,8 +64,9 @@
   <script src="%PUBLIC_URL%/assets/lib/tempusdominus/js/moment.min.js"></script>
   <script src="%PUBLIC_URL%/assets/lib/tempusdominus/js/moment-timezone.min.js"></script>
   <script src="%PUBLIC_URL%/assets/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+  <script src="https://unpkg.com/primereact/primereact.all.min.js"></script>
 
-  
+
 
   <!-- Template Javascript -->
   <script src="%PUBLIC_URL%/assets/js/main.js"></script>
