Listing details page created

--- a/public/assets/images/chocolat/Company Overview – Facts, Mission & Corporate information - Justdial.html
+++ b/public/assets/images/chocolat/Company Overview – Facts, Mission & Corporate information - Justdial.html
@@ -322,7 +322,7 @@
 		</div>
 	</section>
 	<!--Authentication Modal -->
-<div className="modal fade" id="auth" tabindex="-1" role="dialog">
+<div className="modal fade" id="auth" tabIndex="-1" role="dialog">
   <div className="modal-dialog" role="document">
     <div className="modal-content authent">
 
@@ -384,7 +384,7 @@
 
 <!-- Thanks for Visiting Modal -->
 
-<div className="modal fade" id="thankverifyupdate" tabindex="-1" role="dialog">
+<div className="modal fade" id="thankverifyupdate" tabIndex="-1" role="dialog">
   <div className="modal-dialog modal-sm" role="document">
     <div className="modal-content th_wdt dtable">
 
@@ -405,7 +405,7 @@
 </div>
 
 <!--Share via mail  model-->
-<div className="modal fade bs-example-modal-lg" id="shareviaemailpopup" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+<div className="modal fade bs-example-modal-lg" id="shareviaemailpopup" tabIndex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
 	<div className="modal-dialog modal-lg">
 		<div className="modal-content sharevm_model">
 		<div className="modal-header">
@@ -485,7 +485,7 @@
 
 
 <!-- Thanks for submitting Modal -->
-<div className="modal fade" id="testauth" tabindex="-1" role="dialog">
+<div className="modal fade" id="testauth" tabIndex="-1" role="dialog">
   <div className="modal-dialog" role="document">
     <div className="modal-content">
       <div className="modal-body">
@@ -506,7 +506,7 @@
 
 
 <!--Mobile Verication Modal -->
-<div className="modal fade" id="mob_verify" tabindex="-1" role="dialog">
+<div className="modal fade" id="mob_verify" tabIndex="-1" role="dialog">
   <div className="modal-dialog" role="document">
 	<div className="modal-content authent dtable">
 
@@ -553,7 +553,7 @@
 <!-- Mobile Verication Modal -->
 
 <!-- Message Extended Modal -->
-<div className="modal fade" id="failed_attempt" tabindex="-1" role="dialog">
+<div className="modal fade" id="failed_attempt" tabIndex="-1" role="dialog">
   <div className="modal-dialog" role="document">
     <div className="modal-content authent dtable">
 
@@ -574,7 +574,7 @@
 <!-- Message Extended Modal -->
 
 <!-- Need any assistance? Modal -->
-<div className=" modal fade" id="auth" tabindex="-1" role="dialog">
+<div className=" modal fade" id="auth" tabIndex="-1" role="dialog">
   <div className="modal-dialog" role="document">
     <div className="modal-content authent dtable">
 
@@ -618,7 +618,7 @@
 <!-- Need any assistance? Modal -->
 
 <!-- Main Business Category Details Modal -->
-<div className="modal fade" id="mainBusiness_category" tabindex="-1" role="dialog">
+<div className="modal fade" id="mainBusiness_category" tabIndex="-1" role="dialog">
   <div className="modal-dialog" role="document">
     <div className="modal-content pakg_dtl dtable">
       <div className="modal-body">
@@ -643,7 +643,7 @@
 <!-- End Main Business Category Details Modal -->
 
 <!-- Platinum Category List Modal -->
-<div className="modal fade" id="view_plus_platinum" tabindex="-1" role="dialog">
+<div className="modal fade" id="view_plus_platinum" tabIndex="-1" role="dialog">
   <div className="modal-dialog marginClass" role="document">
     <div className="modal-content pakg_dtl dtable">
       <div className="modal-body">
@@ -660,7 +660,7 @@
 <!-- End Platinum Category List Modal -->
 
 <!-- Thanks for Visiting Modal -->
-<div className="modal fade" id="auth" tabindex="-1" role="dialog">
+<div className="modal fade" id="auth" tabIndex="-1" role="dialog">
   <div className="modal-dialog" role="document">
     <div className="modal-content dtable">
 
@@ -683,7 +683,7 @@
 
 
 <!-- BLOCK Virtual Number Modal -->
-<div className="modal fade" id="block_unblock_popup" tabindex="-1" role="dialog">
+<div className="modal fade" id="block_unblock_popup" tabIndex="-1" role="dialog">
   <div className="modal-dialog" role="document">
     <div className="modal-content dtable">
 
@@ -708,7 +708,7 @@
 
 
 <!-- Thanks for Visiting Modal -->
-<div className="modal fade" id="compliaint" tabindex="-1" role="dialog">
+<div className="modal fade" id="compliaint" tabIndex="-1" role="dialog">
   <div className="modal-dialog" role="document">
     <div className="modal-content dtable">
 
@@ -731,7 +731,7 @@
 <!-- End Thanks for Visiting Modal -->
 
 <!-- Thanks for Visiting Modal for service feedback -->
-<div className="modal fade" id="serv_compliaint" tabindex="-1" role="dialog">
+<div className="modal fade" id="serv_compliaint" tabIndex="-1" role="dialog">
   <div className="modal-dialog" role="document">
     <div className="modal-content dtable">
 
@@ -754,7 +754,7 @@
 
 
 <!-- Advertiser/website user Modal Start -->
-<div className="modal fade" id="advertiser_website_user" tabindex="-1" role="dialog">
+<div className="modal fade" id="advertiser_website_user" tabIndex="-1" role="dialog">
   <div className="modal-dialog model-md" role="document">
     <div className="modal-content adv_web dtable">
 
@@ -786,7 +786,7 @@
 
 
 <!--Media Contact Modal -->
-<div className="modal fade" id="mediaContactPopup" tabindex="-1" role="dialog">
+<div className="modal fade" id="mediaContactPopup" tabIndex="-1" role="dialog">
   <div className="modal-dialog" role="document">
     <div className="modal-content media_cnt dtable">
 
@@ -832,7 +832,7 @@
 
 
 <!-- Thanks for Visiting Modal -->
-<div className="modal fade" id="writeReviewForAll" tabindex="-1" role="dialog">
+<div className="modal fade" id="writeReviewForAll" tabIndex="-1" role="dialog">
   <div className="modal-dialog" role="document">
     <div className="modal-content th_wdt dtable">
       <div className="modal-body">
@@ -849,7 +849,7 @@
 </div>
 <!-- End Thanks for Visiting Modal -->
 
-<div className="modal fade" id="shareviaemailsuccess" tabindex="-1" role="dialog">
+<div className="modal fade" id="shareviaemailsuccess" tabIndex="-1" role="dialog">
   <div className="modal-dialog" role="document">
     <div className="modal-content th_wdt dtable">
 
@@ -867,7 +867,7 @@
   </div>
 </div>
 
-<div className="modal fade" id="invalidCaptcha" tabindex="-1" role="dialog">
+<div className="modal fade" id="invalidCaptcha" tabIndex="-1" role="dialog">
   <div className="modal-dialog" role="document">
     <div className="modal-content th_wdt dtable">
 
@@ -886,7 +886,7 @@
 </div>
 
 <!-- Close non-paid business Modal -->
-<div className="modal fade" id="close_business_popup" tabindex="-1" role="dialog">
+<div className="modal fade" id="close_business_popup" tabIndex="-1" role="dialog">
   <div className="modal-dialog" role="document">
     <div className="modal-content dtable">
 
@@ -910,7 +910,7 @@
 <!-- End Close non-paid business Modal -->
 
 <!-- Remove non-paid business Modal -->
-<div className="modal fade" id="remove_business_popup" tabindex="-1" role="dialog">
+<div className="modal fade" id="remove_business_popup" tabIndex="-1" role="dialog">
   <div className="modal-dialog" role="document">
     <div className="modal-content dtable">
 
@@ -934,7 +934,7 @@
 <!-- End Remove non-paid business Modal -->
 
 <!-- Thanks for Visiting Modal -->
-<div className="modal fade" id="buss_close_remove_succ" tabindex="-1" role="dialog">
+<div className="modal fade" id="buss_close_remove_succ" tabIndex="-1" role="dialog">
   <div className="modal-dialog" role="document">
     <div className="modal-content th_wdt dtable">
       <div className="modal-body">
@@ -952,7 +952,7 @@
 <!-- End Thanks for Visiting Modal -->
 
 <!-- Thanks for Visiting Modal -->
-<div className="modal fade" id="buss_close_remove_failure" tabindex="-1" role="dialog">
+<div className="modal fade" id="buss_close_remove_failure" tabIndex="-1" role="dialog">
   <div className="modal-dialog" role="document">
     <div className="modal-content th_wdt dtable">
       <div className="modal-body">
@@ -971,7 +971,7 @@
 
 
 <!-- Contactus Popup Modal Start -->
-<div className="modal fade" id="cms_contactus_popup" tabindex="-1" role="dialog">
+<div className="modal fade" id="cms_contactus_popup" tabIndex="-1" role="dialog">
   <div className="modal-dialog model-md" role="document">
     <div className="modal-content adv_web dtable">
 
@@ -999,7 +999,7 @@
 <!-- Contactus Popup Modal End-->
 
 <!-- No Mobile Modal Start -->
-<div className="modal fade" id="nomobile_cms" tabindex="-1" role="dialog">
+<div className="modal fade" id="nomobile_cms" tabIndex="-1" role="dialog">
   <div className="modal-dialog" role="document">
     <div className="modal-content authent dtable">
 
@@ -1021,7 +1021,7 @@
 </div>
 <!-- No Mobile Modal End -->
 
-<div className="modal fade" id="updateLogin" tabindex="-1" role="dialog">
+<div className="modal fade" id="updateLogin" tabIndex="-1" role="dialog">
   <div className="modal-dialog modal-sm" role="document">
     <div className="modal-content th_wdt dtable">
       <div className="modal-body">
@@ -1322,13 +1322,13 @@
 					<div className="footer_row1">Search for Anything . Anywhere</div>
 					<div className="footer_row2">India's No.1 Local Search Engine</div>
 					<div className="footer_row3">
-						<div className="ctwrap" role="button" onclick="redirectContactUs(&#39;https://www.justdial.com/cms/overview?jdlite=0&amp;source=77&amp;version=&amp;nh=&amp;investor=0&amp;historyBack=0&#39;, &#39;about_us&#39;, &#39;cms_footer&#39;);" tabindex="0"><i className="abtkicon cnfeediconBx"></i> About Us</div>
-						<div className="ctwrap" role="button" onclick="redirectContactUs(&#39;https://www.justdial.com/cms/contact-us?jdlite=0&amp;source=77&amp;version=&amp;nh=&amp;investor=0&amp;historyBack=0&#39;,&#39;contact_us&#39;, &#39;cms_footer&#39;);" tabindex="0"><i className="contactusicon cnfeediconBx"></i> Contact Us</div>
-						<div className="ctwrap" role="button" onclick="redirectFeedback(&#39;https://www.justdial.com/support&#39;, &#39;feedback&#39;, &#39;cms_footer&#39;);" tabindex="0"><i className="feedbackicon cnfeediconBx"></i> Feedback</div>
+						<div className="ctwrap" role="button" onclick="redirectContactUs(&#39;https://www.justdial.com/cms/overview?jdlite=0&amp;source=77&amp;version=&amp;nh=&amp;investor=0&amp;historyBack=0&#39;, &#39;about_us&#39;, &#39;cms_footer&#39;);" tabIndex="0"><i className="abtkicon cnfeediconBx"></i> About Us</div>
+						<div className="ctwrap" role="button" onclick="redirectContactUs(&#39;https://www.justdial.com/cms/contact-us?jdlite=0&amp;source=77&amp;version=&amp;nh=&amp;investor=0&amp;historyBack=0&#39;,&#39;contact_us&#39;, &#39;cms_footer&#39;);" tabIndex="0"><i className="contactusicon cnfeediconBx"></i> Contact Us</div>
+						<div className="ctwrap" role="button" onclick="redirectFeedback(&#39;https://www.justdial.com/support&#39;, &#39;feedback&#39;, &#39;cms_footer&#39;);" tabIndex="0"><i className="feedbackicon cnfeediconBx"></i> Feedback</div>
 
-						<div className="ctwrap" role="button" onclick="redirect_new_url(&#39;https://www.justdial.com/cms/media?jdlite=0&amp;source=77&amp;version=&amp;nh=&amp;investor=0&amp;historyBack=0&#39;, &#39;media&#39;, &#39;cms_footer&#39;);" tabindex="0"><i className="mediaicon cnfeediconBx"></i> Media</div>
-						<div className="ctwrap" role="button" onclick="redirect_new_url(&#39;https://www.justdial.com/cms/justdial-testimonials?jdlite=0&amp;source=77&amp;version=&amp;nh=&amp;investor=0&amp;historyBack=0&#39;, &#39;testimonials&#39;, &#39;cms_footer&#39;);" tabindex="0"><i className="testimonialsicon cnfeediconBx"></i> Testimonials</div>
-						<div className="ctwrap" role="button" onclick="redirect_new_url(&#39;https://www.justdial.com/cms/client-success-stories?jdlite=0&amp;source=77&amp;version=&amp;nh=&amp;investor=0&amp;historyBack=0&#39;, &#39;success_stories&#39;, &#39;cms_footer&#39;); " tabindex="0"><i className="successstoriescon cnfeediconBx"></i> Success Stories </div>
+						<div className="ctwrap" role="button" onclick="redirect_new_url(&#39;https://www.justdial.com/cms/media?jdlite=0&amp;source=77&amp;version=&amp;nh=&amp;investor=0&amp;historyBack=0&#39;, &#39;media&#39;, &#39;cms_footer&#39;);" tabIndex="0"><i className="mediaicon cnfeediconBx"></i> Media</div>
+						<div className="ctwrap" role="button" onclick="redirect_new_url(&#39;https://www.justdial.com/cms/justdial-testimonials?jdlite=0&amp;source=77&amp;version=&amp;nh=&amp;investor=0&amp;historyBack=0&#39;, &#39;testimonials&#39;, &#39;cms_footer&#39;);" tabIndex="0"><i className="testimonialsicon cnfeediconBx"></i> Testimonials</div>
+						<div className="ctwrap" role="button" onclick="redirect_new_url(&#39;https://www.justdial.com/cms/client-success-stories?jdlite=0&amp;source=77&amp;version=&amp;nh=&amp;investor=0&amp;historyBack=0&#39;, &#39;success_stories&#39;, &#39;cms_footer&#39;); " tabIndex="0"><i className="successstoriescon cnfeediconBx"></i> Success Stories </div>
 					</div>
 				</div>
 				<div className="inner_footerbox">
