--- a/public/assets/img/New Tab.html
+++ b/public/assets/img/New Tab.html
@@ -400,7 +400,7 @@
   <!--?lit$735922735$-->
     <cr-toast id="webstoreToast" duration="10000" hidden=""><template shadowrootmode="open"><!----><slot></slot></template>
       <div>You can find older colors in the Chrome Web Store</div>
-      <cr-button role="button" tabindex="0" aria-disabled="false"><template shadowrootmode="open"><!---->
+      <cr-button role="button" tabIndex="0" aria-disabled="false"><template shadowrootmode="open"><!---->
 <div id="background"></div>
 <slot id="prefixIcon" name="prefix-icon">
 </slot>
@@ -420,11 +420,11 @@
     <div className="tile" draggable="true" title="YouTube video downloader" data-index="0">
       <a draggable="false" href="https://www.youtube.com/?feature=ytca" aria-label="YouTube video downloader">
       </a>
-      <cr-icon-button id="actionMenuButton" className="icon-more-vert" tabindex="0" title="More actions for YouTube video downloader shortcut" data-index="0" role="button" aria-disabled="false"><template shadowrootmode="open"><!---->
+      <cr-icon-button id="actionMenuButton" className="icon-more-vert" tabIndex="0" title="More actions for YouTube video downloader shortcut" data-index="0" role="button" aria-disabled="false"><template shadowrootmode="open"><!---->
 <div id="icon">
   <div id="maskedImage"></div>
 </div></template></cr-icon-button>
-      <cr-icon-button id="removeButton" className="icon-clear" tabindex="0" title="Remove" hidden="" data-index="0" role="button" aria-disabled="false"><template shadowrootmode="open"><!---->
+      <cr-icon-button id="removeButton" className="icon-clear" tabIndex="0" title="Remove" hidden="" data-index="0" role="button" aria-disabled="false"><template shadowrootmode="open"><!---->
 <div id="icon">
   <div id="maskedImage"></div>
 </div></template></cr-icon-button>
@@ -440,11 +440,11 @@
     <div className="tile" draggable="true" title="TC Lottery" data-index="1">
       <a draggable="false" href="https://tc-lottery.co/" aria-label="TC Lottery">
       </a>
-      <cr-icon-button id="actionMenuButton" className="icon-more-vert" tabindex="0" title="More actions for TC Lottery shortcut" data-index="1" role="button" aria-disabled="false"><template shadowrootmode="open"><!---->
+      <cr-icon-button id="actionMenuButton" className="icon-more-vert" tabIndex="0" title="More actions for TC Lottery shortcut" data-index="1" role="button" aria-disabled="false"><template shadowrootmode="open"><!---->
 <div id="icon">
   <div id="maskedImage"></div>
 </div></template></cr-icon-button>
-      <cr-icon-button id="removeButton" className="icon-clear" tabindex="0" title="Remove" hidden="" data-index="1" role="button" aria-disabled="false"><template shadowrootmode="open"><!---->
+      <cr-icon-button id="removeButton" className="icon-clear" tabIndex="0" title="Remove" hidden="" data-index="1" role="button" aria-disabled="false"><template shadowrootmode="open"><!---->
 <div id="icon">
   <div id="maskedImage"></div>
 </div></template></cr-icon-button>
@@ -460,11 +460,11 @@
     <div className="tile" draggable="true" title="Sairaj Cab services in aurangabad maharashtra – aurangabad cab services" data-index="2">
       <a draggable="false" href="https://sairajcab.com/" aria-label="Sairaj Cab services in aurangabad maharashtra – aurangabad cab services">
       </a>
-      <cr-icon-button id="actionMenuButton" className="icon-more-vert" tabindex="0" title="More actions for Sairaj Cab services in aurangabad maharashtra – aurangabad cab services shortcut" data-index="2" role="button" aria-disabled="false"><template shadowrootmode="open"><!---->
+      <cr-icon-button id="actionMenuButton" className="icon-more-vert" tabIndex="0" title="More actions for Sairaj Cab services in aurangabad maharashtra – aurangabad cab services shortcut" data-index="2" role="button" aria-disabled="false"><template shadowrootmode="open"><!---->
 <div id="icon">
   <div id="maskedImage"></div>
 </div></template></cr-icon-button>
-      <cr-icon-button id="removeButton" className="icon-clear" tabindex="0" title="Remove" hidden="" data-index="2" role="button" aria-disabled="false"><template shadowrootmode="open"><!---->
+      <cr-icon-button id="removeButton" className="icon-clear" tabIndex="0" title="Remove" hidden="" data-index="2" role="button" aria-disabled="false"><template shadowrootmode="open"><!---->
 <div id="icon">
   <div id="maskedImage"></div>
 </div></template></cr-icon-button>
@@ -480,11 +480,11 @@
     <div className="tile" draggable="true" title="BioskopKaca21.com" data-index="3">
       <a draggable="false" href="https://146.19.213.178/goodfellas-1990-uhd/" aria-label="BioskopKaca21.com">
       </a>
-      <cr-icon-button id="actionMenuButton" className="icon-more-vert" tabindex="0" title="More actions for BioskopKaca21.com shortcut" data-index="3" role="button" aria-disabled="false"><template shadowrootmode="open"><!---->
+      <cr-icon-button id="actionMenuButton" className="icon-more-vert" tabIndex="0" title="More actions for BioskopKaca21.com shortcut" data-index="3" role="button" aria-disabled="false"><template shadowrootmode="open"><!---->
 <div id="icon">
   <div id="maskedImage"></div>
 </div></template></cr-icon-button>
-      <cr-icon-button id="removeButton" className="icon-clear" tabindex="0" title="Remove" hidden="" data-index="3" role="button" aria-disabled="false"><template shadowrootmode="open"><!---->
+      <cr-icon-button id="removeButton" className="icon-clear" tabIndex="0" title="Remove" hidden="" data-index="3" role="button" aria-disabled="false"><template shadowrootmode="open"><!---->
 <div id="icon">
   <div id="maskedImage"></div>
 </div></template></cr-icon-button>
@@ -500,11 +500,11 @@
     <div className="tile" draggable="true" title="Web Store" data-index="4">
       <a draggable="false" href="https://chrome.google.com/webstore?hl=en" aria-label="Web Store">
       </a>
-      <cr-icon-button id="actionMenuButton" className="icon-more-vert" tabindex="0" title="More actions for Web Store shortcut" data-index="4" role="button" aria-disabled="false"><template shadowrootmode="open"><!---->
+      <cr-icon-button id="actionMenuButton" className="icon-more-vert" tabIndex="0" title="More actions for Web Store shortcut" data-index="4" role="button" aria-disabled="false"><template shadowrootmode="open"><!---->
 <div id="icon">
   <div id="maskedImage"></div>
 </div></template></cr-icon-button>
-      <cr-icon-button id="removeButton" className="icon-clear" tabindex="0" title="Remove" hidden="" data-index="4" role="button" aria-disabled="false"><template shadowrootmode="open"><!---->
+      <cr-icon-button id="removeButton" className="icon-clear" tabIndex="0" title="Remove" hidden="" data-index="4" role="button" aria-disabled="false"><template shadowrootmode="open"><!---->
 <div id="icon">
   <div id="maskedImage"></div>
 </div></template></cr-icon-button>
@@ -517,7 +517,7 @@
       </div>
     </div>
   <!---->
-  <cr-button id="addShortcut" tabindex="0" noink="" aria-label="Add shortcut" title="Add shortcut" role="button" aria-disabled="false"><template shadowrootmode="open"><!---->
+  <cr-button id="addShortcut" tabIndex="0" noink="" aria-label="Add shortcut" title="Add shortcut" role="button" aria-disabled="false"><template shadowrootmode="open"><!---->
 <div id="background"></div>
 <slot id="prefixIcon" name="prefix-icon">
 </slot>
@@ -538,7 +538,7 @@
     erroneously played when the user clicks on the outer-most scrollbar. -->
   <div id="content-wrapper" part="wrapper">
     <div className="top-container">
-      <h2 id="title" className="title-container" tabindex="-1">
+      <h2 id="title" className="title-container" tabIndex="-1">
         <slot name="title"></slot>
       </h2>
       <!--?lit$735922735$-->
@@ -563,7 +563,7 @@
       <div id="hover-layer"></div>
       <div id="inner-input-content">
         <slot name="inline-prefix"></slot>
-        <input id="input" part="input" autocomplete="off" autofocus="" tabindex="0" type="text" maxlength="" minlength="" inputmode="" aria-label="Name" aria-invalid="false">
+        <input id="input" part="input" autocomplete="off" autofocus="" tabIndex="0" type="text" maxlength="" minlength="" inputmode="" aria-label="Name" aria-invalid="false">
         <slot name="inline-suffix"></slot>
       </div>
     </div>
@@ -583,7 +583,7 @@
       <div id="hover-layer"></div>
       <div id="inner-input-content">
         <slot name="inline-prefix"></slot>
-        <input id="input" part="input" autocomplete="off" tabindex="0" type="url" maxlength="" minlength="" inputmode="" aria-label="URL" aria-invalid="false">
+        <input id="input" part="input" autocomplete="off" tabIndex="0" type="url" maxlength="" minlength="" inputmode="" aria-label="URL" aria-invalid="false">
         <slot name="inline-suffix"></slot>
       </div>
     </div>
@@ -596,7 +596,7 @@
       </cr-input>
     </div>
     <div slot="button-container">
-      <cr-button className="cancel-button" role="button" tabindex="0" aria-disabled="false"><template shadowrootmode="open"><!---->
+      <cr-button className="cancel-button" role="button" tabIndex="0" aria-disabled="false"><template shadowrootmode="open"><!---->
 <div id="background"></div>
 <slot id="prefixIcon" name="prefix-icon">
 </slot>
@@ -606,7 +606,7 @@
 <div id="hoverBackground" part="hoverBackground"></div></template>
         <!--?lit$735922735$-->Cancel
       </cr-button>
-      <cr-button className="action-button" disabled="" role="button" tabindex="-1" aria-disabled="true"><template shadowrootmode="open"><!---->
+      <cr-button className="action-button" disabled="" role="button" tabIndex="-1" aria-disabled="true"><template shadowrootmode="open"><!---->
 <div id="background"></div>
 <slot id="prefixIcon" name="prefix-icon">
 </slot>
@@ -620,7 +620,7 @@
   </cr-dialog>
   <cr-action-menu id="actionMenu"><template shadowrootmode="open"><!---->
 <dialog id="dialog" part="dialog" role="application">
-  <div id="wrapper" className="item-wrapper" role="menu" tabindex="-1">
+  <div id="wrapper" className="item-wrapper" role="menu" tabIndex="-1">
     <slot id="contentNode"></slot>
   </div>
 </dialog></template>
@@ -650,7 +650,7 @@
   <div id="dismissPromoButtonToastMessage">
     You won't see this specific message again
   </div>
-  <cr-button id="undoDismissPromoButton" aria-label="Press Ctrl+Z to undo" role="button" tabindex="0" aria-disabled="false"><template shadowrootmode="open"><!---->
+  <cr-button id="undoDismissPromoButton" aria-label="Press Ctrl+Z to undo" role="button" tabIndex="0" aria-disabled="false"><template shadowrootmode="open"><!---->
 <div id="background"></div>
 <slot id="prefixIcon" name="prefix-icon">
 </slot>
@@ -678,7 +678,7 @@
     </a>
     <div id="customizeButtons">
       <!--?lit$735922735$-->
-      <cr-button id="customizeButton" className="customize-button" title="Customize this page" aria-pressed="false" role="button" tabindex="0" aria-disabled="false" data-native-id="NewTabPageUI::kCustomizeChromeButtonElementId" has-prefix-icon_=""><template shadowrootmode="open"><!---->
+      <cr-button id="customizeButton" className="customize-button" title="Customize this page" aria-pressed="false" role="button" tabIndex="0" aria-disabled="false" data-native-id="NewTabPageUI::kCustomizeChromeButtonElementId" has-prefix-icon_=""><template shadowrootmode="open"><!---->
 <div id="background"></div>
 <slot id="prefixIcon" name="prefix-icon">
 </slot>
